<?xml version="1.0" encoding="utf-8"?>

<!--created by Karen Claire Ulmer, 18 Feb 2018 -->
<!-- image credit: https://material.io/icons/#ic_movie_filter-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

  <android.support.constraint.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingBottom="@dimen/list_item_padding_vertical"
        android:paddingLeft="@dimen/list_item_padding_horizontal"
        android:paddingRight="@dimen/list_item_padding_horizontal"
        android:paddingTop="@dimen/list_item_padding_vertical">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/poster_width_main"
            android:layout_height="@dimen/poster_height_main"
            app:layout_constraintLeft_toLeftOf="@id/horizontal_middle"
            app:layout_constraintRight_toRightOf="@id/horizontal_middle"
            tools:src="@drawable/ic_movie_filter_black_24dp"/>

    <TextView
        android:id="@+id/tv_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/rating"
        app:layout_constraintRight_toLeftOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/list_item_right_margin"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintRight_toLeftOf="@id/tv_date"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_label"
            tools:text="@string/rating_placeholder" />

        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:paddingRight="@dimen/list_item_padding_horizontal"
            android:paddingLeft="@dimen/list_item_padding_horizontal"
            android:layout_marginLeft="@dimen/list_item_left_margin"
            app:layout_constraintLeft_toRightOf="@+id/tv_rating_label"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_left_margin"
            android:paddingRight="@dimen/list_item_padding_horizontal"
            android:paddingLeft="@dimen/list_item_padding_horizontal"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="@dimen/list_item_text_size"
            app:layout_constraintLeft_toRightOf="@+id/tv_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label"
            tools:text="@string/date_placeholder" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp"/>

</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>